--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "src": "app.py",
       "use": "@vercel/python",
       "config": {
-        "postbuild": "apt-get install -y /install/wkhtmltox_0.12.6.1-2.jammy_amd64.deb"
+        "postbuild": "apt-get install -y ./install/wkhtmltox_0.12.6.1-2.jammy_amd64.deb"
       }
     }
   ],
