--- a/vercel.json
+++ b/vercel.json
@@ -6,16 +6,14 @@
   "env": {
     "environment": "VERCEL",
     "redis": "localhost"
-  },
+  },  
   "builds": [
     {
       "src": "app.py",
       "use": "@vercel/python",
-      "config": {
-        "postbuild": "apt-get install -y ./install/wkhtmltox_0.12.6.1-2.jammy_amd64.deb"
-      }
     }
   ],
+  "buildCommand": "dpkg -i ./install/wkhtmltox_0.12.6.1-2.jammy_amd64.deb && pip install -r requirements.txt",
   "routes": [
     {
       "src": "/",
@@ -27,3 +25,4 @@
     }
   ]
 }
+
