--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python",
+      "use": "@vercel/python"
     }
   ],
   "buildCommand": "dpkg -i ./install/wkhtmltox_0.12.6.1-2.jammy_amd64.deb && pip install -r requirements.txt",
