--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,11 @@
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+          "buildCommand": "pip install --upgrade pip && cd api && pip install -r requirements.txt  && dpkg -i ./install/wkhtmltox_0.12.6.1-2.jammy_amd64.deb && pip install -r requirements.txt",
+          "debug": true
+      }
     }
   ],
   "routes": [
@@ -19,7 +23,6 @@
       "dest": "/app.py"
     }
   ],
-  "buildCommand": "dpkg -i ./install/wkhtmltox_0.12.6.1-2.jammy_amd64.deb && pip install -r requirements.txt",
   "env": {
     "environment": "VERCEL",
     "redis": "localhost"
