--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,7 @@
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python",
-      "config": {
-          "buildCommand": "pip install --upgrade pip && cd api && pip install -r requirements.txt  && dpkg -i ./install/wkhtmltox_0.12.6.1-2.jammy_amd64.deb && pip install -r requirements.txt",
-          "debug": true
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
@@ -23,6 +19,7 @@
       "dest": "/app.py"
     }
   ],
+  "buildCommand": "pip3 install --upgrade pip && pip3 install -r requirements.txt  && dpkg -i ./install/wkhtmltox_0.12.6.1-2.jammy_amd64.deb && pip3 install -r requirements.txt",
   "env": {
     "environment": "VERCEL",
     "redis": "localhost"
