--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,12 @@
   "regions": [
     "fra1"
   ],
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
+    }
+  ],  
   "routes": [
     {
       "src": "/",
