--- a/.github/workflows/docker-base-build.yml
+++ b/.github/workflows/docker-base-build.yml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - './Dockerfile.dockerbase'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -41,23 +42,3 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
         run: |
-          echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-          IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/strawall_base"
-          KEEP=5
-          IMAGES=$(curl -s -u $DOCKERHUB_USERNAME:$DOCKERHUB_PASSWORD "https://hub.docker.com/v2/repositories/$IMAGE_NAME/tags?page_size=100" | jq -r '.results|.[]|.name')
-          COUNT=0
-          for IMAGE in $IMAGES; do
-              if [[ $IMAGE != "latest" ]]; then
-                  COUNT=$((COUNT+1))
-                  if [[ $COUNT -gt $KEEP ]]; then
-                      docker rmi $IMAGE_NAME:$IMAGE
-                      curl -s -X DELETE -u $DOCKERHUB_USERNAME:$DOCKERHUB_PASSWORD "https://hub.docker.com/v2/repositories/$IMAGE_NAME/tags/$IMAGE/"
-                  fi
-              fi
-          done
-
-      - name: Display image paths
-        run: |
-          echo "Docker image paths:"
-          echo "Versioned: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/strawall_base:${{ env.VERSION }}"
-          echo "Latest: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/strawall_base:latest"
