--- a/.github/workflows/docker-base-build.yml
+++ b/.github/workflows/docker-base-build.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/strawall_base:${{ env.VERSION }} -f ./Dockerfile.dockerbase .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/strawall_base:${{ env.VERSION }} -f ./Dockerfile.basedocker .
           docker tag ${{ secrets.DOCKERHUB_USERNAME }}/strawall_base:${{ env.VERSION }} ${{ secrets.DOCKERHUB_USERNAME }}/strawall_base:latest
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/strawall_base:${{ env.VERSION }}
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/strawall_base:latest
